Fix label alignment

--- a/app/assets/stylesheets/editor-3/_forms.scss
+++ b/app/assets/stylesheets/editor-3/_forms.scss
@@ -11,18 +11,9 @@
   margin-top: $baseSize;
 }
 
-.Editor-formInner.Editor-formInner--Slider {
-  align-items: flex-start;
-  margin-top: $baseSize * 2;
-}
-
-.Editor-formInner.Editor-formInner--Size {
-  align-items: baseline;
-  margin-top: $baseSize * 2;
-}
-
+.Editor-formInner.Editor-formInner--Size,
 .Editor-formInner.Editor-formInner--FillColor {
-  align-items: flex-start;
+  align-items: baseline;
   margin-top: $baseSize * 2;
 }
 
